
2010-01-10 sd-reader
	* Make LFN support configurable.
	* Ignore LFN directory entries without 8.3 name.
	* Ignore LFN directory entries which do not match the 8.3 name's checksum.
	* Implement delayed directory entry updates (disabled by default) (thanks to Adam Mayer).
	* Speedup search for free cluster.
	* Fix memory leak when using the "init" command (thanks to Tibor Vilhan).
	* Fix ATmega328P-specific pin mappings.
	* Add some of the picoPower MCU variants.

2009-03-30 sd-reader
	* Make 8.3 basename and/or extension lowercase when told by Windows NT and later.
	* Add ATmega328 pin configuration.
	* Fix MMC/SD/SDHC distinction.
	* Fix raw block read/write buffering (thanks to Kurt Sterckx).
	* Fix fat size calculation for FAT16 when configured with FAT32.
	* Fix compilation for read-only configurations.
	* Fix card lock detection.
	* Make it easier to link with a C++ application (thanks to Jérôme Despatis).

2008-11-21 sd-reader
	* Support for SDHC cards (disabled by default).
	* Support for FAT32 (disabled by default).

2008-06-08 sd-reader
	* New "init" command to allow reinitialization of memory card.
	* Fix searching through multi-cluster directories.
	* Fix reading directory entries spanning a cluster border (backport from mega-eth).
	* Do not abort the whole lfn entry when the file name is too long, just drop single characters (backport from mega-eth).
	* Change fat16_get_dir_entry_of_path() to ignore a slash at the end (backport from mega-eth).
	* Make listing a directory's content much faster (backport from mega-eth).
	* Shrink code size by centralizing cluster offset calculation (backport from mega-eth).
	* Some other small fixes and optimizations.

2007-12-13 sd-reader
	* Dual-license the major implementation modules under GPL and LGPL.

2007-06-03 sd-reader
	* Fix reading beyond cached block (by Benjamin Meier).
	* Implement support for reading and writing file modification dates/times.
	  (Thanks to Torsten Seeboth for testing.)
