@@ -1,4 +1,9 @@
 
+2010-10-10 sd-reader
+	* Fix equal file names when reading two successive 8.3 directory entries.
+	* Fix calculation of cluster positions beyond 4GB (32 bit integer overflow).
+	* Fix endless looping of directory listing (occured with valid entry at end of last cluster).
+
 2010-01-10 sd-reader
 	* Make LFN support configurable.
 	* Ignore LFN directory entries without 8.3 name.
